...
    const SegmentsTab(),
  ];

  final List<String> _titles = [
    'Exercise Tracker',
    'Historial de actividades',
    'Segmentos',
  ];

  late int _currentIndex;

  @override
  void initState() {
...
          BottomNavigationBarItem(
            icon: Icon(Icons.home),
            label: 'Home',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.map),
            label: 'Actividades',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.list),
            label: 'Segmentos',
          ),
        ],
...
