...
                          ),
                        ),
                      ),
                    ),
                    const SizedBox(height: 20),
                    ElevatedButton(
                      child: const Text('Iniciar'),
                      onPressed: () {
                        requestLocationPermission();
                        // String username = _usernameController.text;
                        // String password = _passwordController.text;
                        // bool userFound = false;

...
                        // }
                        _login(context);
                      },
                    ),
                    const SizedBox(height: 20),
                    TextButton(
                      child: const Text('Crear cuenta'),
                      onPressed: () {
                        Navigator.push(
                          context,
                          MaterialPageRoute(
                            builder: (context) => SignUpScreen(),
                          ),
...
